     (Vincent Ladeuil)

   * ``reconfigure`` can now convert from repositories.  (Aaron Bentley)

   * ``-l`` is now a short form for ``--limit`` in ``log``.  (Matt Nordhoff)

   * ``merge`` now warns when merge directives cause cherrypicks.
     (Aaron Bentley)

   * ``split`` now supported, to enable splitting large trees into smaller
     pieces.  (Aaron Bentley)

  BUGFIXES:

   * Fixed Unicode encoding error in ``ignored`` when the output is
     redirected to a pipe. (Lukáš Lalinský)

   * Fix traceback when sending large response bodies over the smart protocol
     on Windows. (Andrew Bennetts, #115781)

   * pycurl authentication handling was broken and incomplete. Fix handling of
     user:pass embedded in the urls.
     (Vincent Ladeuil, #177643)

   * Transform failures no longer cause ImmortalLimbo errors (Aaron Bentley,
     #137681)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)

   * When dumb http servers return whole files instead of the requested ranges,
     read the remaining bytes by chunks to avoid overflowing network buffers.
     (Vincent Ladeuil, #175886)

   * ``reconfigure`` is able to convert trees into lightweight checkouts.
     (Aaron Bentley)

  DOCUMENTATION:

   * Reference material has now be moved out of the User Guide and added
     to the User Reference. The User Reference has gained 4 sections as
     a result: Authenication Settings, Configuration Settings, Conflicts
     and Hooks. All help topics are now dumped into text format in the
     doc/en/user-reference directory for those who like browsing that
     information in their editor. (Ian Clatworthy)

  INTERNALS:

    * Help topics can now be loaded from files. 
      (Ian Clatworthy, Alexander Belchenko)

    * Parent Providers should now implement ``get_parent_map`` returning a
      dictionary instead of ``get_parents`` returning a list.